precompiles/macro/tests/compile-fail/precompile/fn-modifiers/multiple-modifiers.stderr
error: A precompile method can have at most one modifier (payable, view)
  --> tests/compile-fail/precompile/fn-modifiers/multiple-modifiers.rs:27:16
   |
27 |     #[precompile::payable]
   |                   ^^^^^^^
